Added Dynamic button with name from database.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,11 +9,18 @@
     tools:context=".MainActivity"
     >
 
-<!--
+
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content">
--->
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:orientation="vertical" android:layout_width="match_parent"
+        android:layout_height="match_parent" android:id="@+id/main_layout">
+
+    </LinearLayout>
+
+<!--
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
@@ -126,5 +133,6 @@
     </LinearLayout>
 
 </RelativeLayout>
-    </android.support.v4.widget.NestedScrollView>
-<!-- </ScrollView> -->
+-->
+</ScrollView>
+</android.support.v4.widget.NestedScrollView>
